[package]
name = "network_scanner"
version = "0.1.0"
edition = "2021"
authors = ["John-Beeping-Doe"]
description = "A fast, cross-platform TUI network dashboard in Rust using Ratatui."
repository = "https://github.com/John-Beeping-Doe/NetworkScanner"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
