[package]
name = "network_scanner"
version = "0.1.0"
edition = "2021"
authors = ["John-Beeping-Doe"]
description = "A fast, cross-platform network dashboard in Rust using Dioxus."
repository = "https://github.com/John-Beeping-Doe/NetworkScanner"

[dependencies]
dioxus = "0.5.6"
dioxus-desktop = "0.5.6"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = "0.4"
